--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://database-project-one.cjsdfjt5gj6o.us-east-1.rds.amazonaws.com
-:5432/postgres
-spring.datasource.username=nrevs
-spring.datasource.password=KTw6bEi8dy9vxGdRjfrM
-spring.datasource.initialization-mode=always
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://database-project-one.cjsdfjt5gj6o.us-east-1.rds.amazonaws.com
+#:5432/postgres
+#spring.datasource.username=nrevs
+#spring.datasource.password=KTw6bEi8dy9vxGdRjfrM
+#spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port = 3000
+
+
+logging.level.org.springframework=info
+
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
