troubleshooting application build: application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.datasource.initialization-mode=always
 
 #spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port = 3000
 
