--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.initialization-mode=always
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.jdbc.lob.non_contextual_creation=true
