--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://database-1.cuqikjxjskp4.us-west-1.rds.amazonaws.com:5432/flashcards
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=QqcDfmLHNZ04CbNaEhsc
 spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.jdbc.lob.non_contextual_creation=true
