change application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=QqcDfmLHNZ04CbNaEhsc
 spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.jdbc.lob.non_contextual_creation=true
