fixed edit issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.username=postgres
 spring.datasource.password=QqcDfmLHNZ04CbNaEhsc
 spring.datasource.initialization-mode=always
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.jdbc.lob.non_contextual_creation=true
