--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.datasource.platform=postgres
 # spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.url=jdbc:postgresql://database-1.cuqikjxjskp4.us-west-1.rds.amazonaws.com:5432/flashcards
 spring.datasource.username=postgres
-spring.datasource.password=QqcDfmLHNZ04CbNaEhsc
+# spring.datasource.password=QqcDfmLHNZ04CbNaEhsc
+spring.datasource.password=sMeZ9XotwSYzTt3GNnT5
 spring.datasource.initialization-mode=always
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.jdbc.lob.non_contextual_creation=true
+
+server.port=8082
